[tool.poetry]
name = "etherlink-watchtower"
version = "0.1.0"
description = ""
authors = ["Igor Sereda <sereda.igor.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
python-graphql-client = "^0.4.3"
pytezos = ">=3.13.3"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
