[project]
name = "etherlink-watchtower"
version = "0.1.0"
description = "Etherlink Bridge withdrawals Watchtower"
authors = ["Igor Sereda <sereda.igor.s@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.5.2",
    "pytezos>=3.13",
    "python-graphql-client>=0.4",
    "websockets<14.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff",
    "ssort>=0.13.0",
]

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "single" }

[tool.black]
line-length = 140
target-version = ["py312"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
